# exercise

./: README.md  a-002-wallet.c  q-002-wallet.md
sources/001/: a-001-poker.c  q-001-poker.md
sources/002/: .gitignore  CMakeLists.txt  gencomb.c  wallet-main.c  wallet-test.c  wallet-util.c  wallet.h
